# ganbeach-bookmarker

./: .gitignore  Cargo.toml  LICENSE  README.md  rollup.config.js
dev/builder/: Cargo.toml
dev/builder/src/: builder.rs  builder_option.rs  error.rs  main.rs  profile.rs  target_browser.rs  target_package.rs
script/debug/: chrome.sh  firefox.sh
script/release/: chrome.sh  firefox.sh
src/: README.md  lib.rs
src/background/: Cargo.toml
src/background/src/: handler.rs  lib.rs
src/background/src/handler/: handle_fetch_lists.rs  handle_hotkeys.rs  handle_initialize_database.rs  handle_message.rs  handle_notify_error.rs  handle_open_tab.rs  handle_register_cleaner.rs  handle_response_lists.rs  handle_toolbar.rs
src/config/src/: database.rs  lib.rs  url.rs
src/context/background/background_error_context/: Cargo.toml
src/context/background/background_error_context/src/: lib.rs
src/context/background/clean_history_context/: Cargo.toml
src/context/background/clean_history_context/src/: lib.rs
src/context/background/fetch_lists_context/: Cargo.toml
src/context/background/fetch_lists_context/src/: lib.rs
src/context/background/initialize_database_context/: Cargo.toml
src/context/background/initialize_database_context/src/: lib.rs
src/context/background/listen_hotkeys_context/: Cargo.toml
src/context/background/listen_hotkeys_context/src/: lib.rs
src/context/background/listen_messages_context/: Cargo.toml
src/context/background/listen_messages_context/src/: lib.rs
src/context/background/load_access_token_context/: Cargo.toml
src/context/background/load_access_token_context/src/: lib.rs
src/context/background/load_all_lists_context/: Cargo.toml
src/context/background/load_all_lists_context/src/: lib.rs
src/context/background/open_tab_context/: Cargo.toml
src/context/background/open_tab_context/src/: lib.rs
src/context/background/open_window_context/: Cargo.toml
src/context/background/open_window_context/src/: lib.rs
src/context/background/read_bookmark_context/: Cargo.toml
src/context/background/read_bookmark_context/src/: lib.rs
src/context/background/toolbar_context/: Cargo.toml
src/context/background/toolbar_context/src/: lib.rs
src/context/popup/create_bookmark_context/: Cargo.toml
src/context/popup/create_bookmark_context/src/: lib.rs
src/context/popup/extract_popup_origin_context/: Cargo.toml
src/context/popup/extract_popup_origin_context/src/: lib.rs
src/context/popup/load_history_context/: Cargo.toml
src/context/popup/load_history_context/src/: lib.rs
src/context/popup/request_create_bookmark_context_mock/: Cargo.toml
src/context/popup/request_create_bookmark_context_mock/src/: lib.rs
src/context/popup/request_lists_context/: Cargo.toml
src/context/popup/request_page_data_context/: Cargo.toml
src/context/popup/request_tab_context/: Cargo.toml
src/domain/: Cargo.toml
src/domain/src/: access_token.rs  auth_provider.rs  browser_bookmark.rs  command.rs  completion_match.rs  constant.rs  cookie.rs  database_config.rs  error.rs  feature.rs  folder_title.rs  history.rs  hotkey.rs  interface.rs  lib.rs  list.rs  lists.rs  login_url.rs  message.rs  metadata.rs  name_indexer.rs  notifications.rs  popup_origin.rs  refresh_token.rs  result.rs  scene.rs  sender_info.rs  server.rs  tab.rs  url.rs
src/grpc-interface/: Cargo.toml  build.rs
src/grpc-interface/protobuf/: account.proto  add.proto  get.proto
src/grpc-interface/src/: account.rs  add.rs  client.rs  error.rs  get.rs  grpc_response.rs  lib.rs
src/grpc-interface/src/convert/: access_token.rs  list.rs  lists.rs  login_url.rs  mod.rs  request.rs  response.rs
src/hotkey/: Cargo.toml
src/hotkey/src/: lib.rs
src/indexed-db/: Cargo.toml
src/indexed-db/src/: accessor.rs  database.rs  dom_string_iterator.rs  error.rs  initializer.rs  key_path.rs  lib.rs  list.rs  object_store.rs  object_store_parameters.rs  open_db_request.rs  request.rs  rewritable_result.rs  rewritable_waker.rs  transaction.rs  version_change_event.rs
src/message/: Cargo.toml
src/message/src/: error.rs  lib.rs  receiver.rs  sender.rs  sender_info.rs
src/popup/: Cargo.toml
src/popup/src/: app.rs  components.rs  handler.rs  hooks.rs  icons.rs  lib.rs  utils.rs
src/popup/src/components/: annotation.rs  created_result.rs  creating.rs  dialog.rs  error_result.rs  input_field.rs  input_fields.rs  input_popup.rs  lists_context_provider.rs  load-module.js  scene_context_provider.rs  scene_renderer.rs  stored_list.rs  suggest_panel.rs  suggest_row.rs  text_input.rs
src/popup/src/css/: created_result.css  dialog.css  index.css  input.css  stored_list.css
src/popup/src/handler/: handle_create_bookmark.rs  handle_extract_popup_origin.rs  handle_load_access_token.rs  handle_load_history.rs  handle_request_lists.rs  handle_request_open_tab.rs
src/popup/src/hooks/: use_annotation.rs  use_dialog_ref.rs  use_has_focus.rs  use_lists_context.rs  use_oninput.rs  use_page_ref.rs  use_restore_metadata.rs  use_scene_context.rs  use_suggest.rs
src/popup/src/icons/: folder.rs  tag.rs
src/popup/tests/: create_bookmark.rs  use_lists_context.rs  use_reducer_eq_works.rs  yew_tests.rs
src/popup_toolbar/: Cargo.toml
src/popup_toolbar/src/: lib.rs  toolbar.rs
src/public-messenger/: Cargo.toml
src/public-messenger/src/: error_message_map.rs  error_title_map.rs  lib.rs
src/repository/: Cargo.toml
src/repository/src/: convert.rs  lib.rs
src/repository/src/convert/: lists.rs  name_indexer.rs
src/usecase/: Cargo.toml
src/usecase/src/: browser_bookmarker.rs  commands_listener.rs  database_initializer.rs  error_messenger.rs  history_cleaner.rs  lib.rs  link_opener.rs  message_receiver.rs  message_sender.rs  notification_emitter.rs  popup_opener.rs  popup_origin_extractor.rs  toolbar.rs
src/web-interface/: Cargo.toml
src/web-interface/src/: bookmarks.rs  cookie.rs  error.rs  extern_type.rs  history.rs  lib.rs  notifications.rs  page_data.rs  tabs.rs  windows.rs
static/: manifest_v2.json  manifest_v3.json
static/css/: fonts.css
static/lib/easy-mde/: load-module.js  load.js
(+3 files in other folders)
