[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["formatting", "local-offset"] }
log = "0.4"