[package]
name = "grpc-interface"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "oauth-client"
#path = "src/lib.rs"

[dependencies]
domain = { path = "../domain" }
# jwt = { path = "../jwt" }
config = { path = "../config" }

# tonic-web-wasm-client = "0.2.2"
prost = "0.11.0"
# tonic = { version = "0.8.1", default-features = false, features = [
#     "prost",
#     "codegen",
# ] }
tonic = { version = "0.9.2", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-types = "0.9.2"
console_error_panic_hook = "0.1.7"
http = "0.2"
http-body = "0.4"
httparse = "1.8"
tower = { version = "0.4", default-features = false }
tokio = { version = "1.21", features = [
    "macros",
    "rt",
] } # Only features sync,macros,io-util,rt,time are supported on wasm.
log = { version = "0.4", features = ["release_max_level_off"] }
base64 = "0.13"
bytes = "1.2"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false } #, features = ["cookies"]
futures-core = "0.3"
serde = "1.0.145"

[build-dependencies]
# tonic-build = "0.8"
tonic-build = { version = "0.8", default-features = false, features = [
    "prost",
] }
