[package]
name = "hotkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
web-interface = { path = "../web-interface" }
wasm-bindgen = "0.2"
log = { version = "0.4", features = ["release_max_level_off"] }
