[package]
name = "indexed-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_off"] }
futures = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.31"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "DomException",
    "DomStringList",
    "WorkerGlobalScope",
]
