[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
domain = { path = "../domain" }
web-interface = { path = "../web-interface" }

js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = { version = "0.4", features = ["release_max_level_off"] }
rand = "0.8"
fake = { version = "2.5", features = ["derive", "chrono"] }
serde-wasm-bindgen = "0.4"
gloo-utils = "0.1"
gloo-events = "0.1"
thiserror = "1.0"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
#default-features = false

[dependencies.web-sys]
version = "0.3"
features = ["MessageEvent"]
