[package]
name = "popup_toolbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
web-interface = { path = "../web-interface" }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
log = { version = "0.4", features = ["release_max_level_off"] }
wasm-bindgen-futures = "0.4"
