[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
indexed-db = { path = "../indexed-db" }

log = { version = "0.4", features = ["release_max_level_off"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
futures = "0.3"

js-sys = "0.3"
[dev-dependencies]
wasm-bindgen-test = "0.3.31"


[dependencies.web-sys]
version = "0.3"
features = ["IdbIndexParameters", "DomException"]
