[package]
name = "web-interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
#default = ["console_error_panic_hook", "chrome"]
chrome = []
firefox = []

[dependencies]
config = { path = "../config" }
domain = { path = "../domain" }

js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
log = { version = "0.4", features = ["release_max_level_off"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-storage = "0.2.2"
thiserror = "1.0"
url = "2"


[dependencies.web-sys]
version = "0.3"
features = ["Event", "Location"]
