[package]
name = "create_bookmark_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../../../domain" }
config = { path = "../../../config" }
grpc-interface = { path = "../../../grpc-interface" }
message = { path = "../../../message" }
repository = { path = "../../../repository" }
web-interface = { path = "../../../web-interface" }
